log
Wed Apr 15 04:10:22 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
e893cc3
Wed Apr 15 04:14:00 AM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:48: error: ‘HasMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   48 |     HashMap* newMap = (HashMap*) malloc(sizeof(HasMap));
      |                                                ^~~~~~
      |                                                HashMap
hashmap.c:48:48: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:49:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   49 |     newMap->pairs = NULL;
      |           ^~
hashmap.c:50:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   50 |     newMap->size = NULL;
      |                  ^
36166b8
Wed Apr 15 04:14:16 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   49 |     newMap->pairs = NULL;
      |           ^~
hashmap.c:50:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   50 |     newMap->size = NULL;
      |                  ^
2d60705
